core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Attendee__c/fields/ZVC__Attentiveness_Score__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Attentiveness_Score__c</fullName>
    <label>Attentiveness Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>