core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Attendee__c/fields/ZVC__Duration__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>