core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Attendee__c/fields/ZVC__Duration_HH_Mi_SS__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Duration_HH_Mi_SS__c</fullName>
    <label>Duration(HH:Mi:SS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>