core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Attendee__c/fields/ZVC__Join_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Join_Time__c</fullName>
    <label>Join Time</label>
    <type>DateTime</type>
</CustomField>