core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Attendee__c/fields/ZVC__Leave_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Leave_Time__c</fullName>
    <label>Leave Time</label>
    <type>DateTime</type>
</CustomField>