core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Attendee__c/fields/ZVC__User_Email__c.field-meta.xml
<CustomField>
    <fullName>ZVC__User_Email__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>