core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Attendee__c/fields/ZVC__User_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__User_Id__c</fullName>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>