core/unpackaged/main/default/objects/ZVC__Zoom_Webinar_Attendee__c/fields/ZVC__UUID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__UUID__c</fullName>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>